src/libbulletc/src/btTypedConstraint_wrap.h


	EXPORT void btTypedConstraint_delete(btTypedConstraint* obj);


	EXPORT btAngularLimit* btAngularLimit_new();

	EXPORT void btAngularLimit_fit(btAngularLimit* obj, btScalar* angle);

	EXPORT btScalar btAngularLimit_getBiasFactor(btAngularLimit* obj);

	EXPORT btScalar btAngularLimit_getCorrection(btAngularLimit* obj);

	EXPORT btScalar btAngularLimit_getError(btAngularLimit* obj);

	EXPORT btScalar btAngularLimit_getHalfRange(btAngularLimit* obj);

	EXPORT btScalar btAngularLimit_getHigh(btAngularLimit* obj);

	EXPORT btScalar btAngularLimit_getLow(btAngularLimit* obj);

	EXPORT btScalar btAngularLimit_getRelaxationFactor(btAngularLimit* obj);

	EXPORT btScalar btAngularLimit_getSign(btAngularLimit* obj);

	EXPORT btScalar btAngularLimit_getSoftness(btAngularLimit* obj);

	EXPORT bool btAngularLimit_isLimit(btAngularLimit* obj);

	EXPORT void btAngularLimit_set(btAngularLimit* obj, btScalar low, btScalar high, btScalar _softness, btScalar _biasFactor, btScalar _relaxationFactor);

	EXPORT void btAngularLimit_set2(btAngularLimit* obj, btScalar low, btScalar high, btScalar _softness, btScalar _biasFactor);

	EXPORT void btAngularLimit_set3(btAngularLimit* obj, btScalar low, btScalar high, btScalar _softness);

	EXPORT void btAngularLimit_set4(btAngularLimit* obj, btScalar low, btScalar high);

	EXPORT void btAngularLimit_test(btAngularLimit* obj, btScalar angle);

	EXPORT void btAngularLimit_delete(btAngularLimit* obj);